--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,9 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "export": "next export",
+    "deploy": "next build && next export && gh-pages -d out"
   },
   "dependencies": {
+    "@trussworks/react-uswds": "^10.2.0",
+    "@uswds/uswds": "^3.13.0",
     "next": "16.0.5",
     "react": "19.2.0",
     "react-dom": "19.2.0"
@@ -18,6 +22,7 @@
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.5",
+    "gh-pages": "^6.3.0",
     "tailwindcss": "^4"
   }
 }
