--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,9 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint",
-    "export": "next export",
-    "deploy": "next build && next export && gh-pages -d out"
+    "lint": "eslint"
   },
   "dependencies": {
     "@trussworks/react-uswds": "^10.2.0",
