select visa type page

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@trussworks/react-uswds": "^10.2.0",
     "@uswds/uswds": "^3.13.0",
+    "clsx": "^2.1.1",
     "next": "16.0.5",
     "react": "19.2.0",
     "react-dom": "19.2.0"
